--- a/worlds/kirbyam/data/locations.yaml
+++ b/worlds/kirbyam/data/locations.yaml
@@ -2,40 +2,44 @@
 # schema_version increments only when the YAML structure meaningfully changes.
 schema_version: 1
 locations:
-- key: test_location_1
-  name: Test Location 1
-  addresses:
-    na: null
-    eu: null
-    jp: null
-    vc: null
-  tags:
-    - poc
-- key: test_location_2
-  name: Test Location 2
-  addresses:
-    na: null
-    eu: null
-    jp: null
-    vc: null
-  tags:
-    - poc
-# - key: poc_room_check
-#   name: "POC: Enter Room A"
-#   tags: ["poc"]
+# - key: test_location_1
+#   name: Test Location 1
 #   addresses:
-#     na: 1234   # TODO: Room A ID value (NOT an address)
+#     na: null
 #     eu: null
 #     jp: null
 #     vc: null
-# - key: poc_goal_room
-#   name: "POC: Enter Room B (Goal)"
-#   tags: ["poc"]
+#   tags:
+#     - poc
+# - key: test_location_2
+#   name: Test Location 2
 #   addresses:
-#     na: 5678   # TODO: Room B ID value
+#     na: null
 #     eu: null
 #     jp: null
 #     vc: null
+#   tags:
+#     - poc
+- key: poc_room_check
+  name: "POC: Enter Room A"
+  tags:
+    - poc
+  addresses:
+    na: 1234   # TODO: Room A ID value (NOT an address)
+    eu: null
+    jp: null
+    vc: null
+  value: 1234
+- key: poc_goal_room
+  name: "POC: Enter Room B (Goal)"
+  tags:
+    - poc
+  addresses:
+    na: 5678   # TODO: Room B ID value
+    eu: null
+    jp: null
+    vc: null
+  value: 5678
 - key: big_button_1_15
   name: Big Button 1-15
   addresses:
